# xpeerchain

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  questions.md
admission_control/: README.md
admission_control/admission_control_proto/: Cargo.toml  build.rs
admission_control/admission_control_service/: Cargo.toml
benchmark/: Cargo.toml
benchmark/src/: lib.rs  ruben_opt.rs
client/: Cargo.toml
client/src/: account_commands.rs  client_proxy.rs  commands.rs  grpc_client.rs  lib.rs  main.rs  query_commands.rs  transfer_commands.rs
client/xpeer_wallet/: Cargo.toml  README.md
common/build_helpers/: Cargo.toml
common/canonical_serialization/: Cargo.toml
common/executable_helpers/: Cargo.toml
common/executable_helpers/src/: helpers.rs  lib.rs
common/jemalloc/: Cargo.toml
common/jemalloc/src/: lib.rs
config/: Cargo.toml
consensus/: Cargo.toml  README.md  build.rs
docker/: README.md
documentation/: coding_guidelines.md
execution/: README.md
language/: README.md  test.sh
mempool/: Cargo.toml  README.md  build.rs
network/: Cargo.toml  README.md  build.rs
scripts/: cargo_check_dependencies.sh  cargo_update_outdated.sh  clippy.args  clippy.sh  dev_setup.sh  nightly_features.sh
storage/: README.md
terraform/: auth.tf  faucet.tf  monitoring.tf  validators.tf
testsuite/: Cargo.toml
types/: Cargo.toml  build.rs
vm_validator/: Cargo.toml
xpeer_node/: Cargo.toml
xpeer_swarm/: Cargo.toml
(+746 files in other folders)
