[package]
name = "executable_helpers"
version = "0.1.0"
authors = ["XPeer Association <opensource@xpeer.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
clap = "2.32.0"
slog-scope = "4.0"

config = { path = "../../config" }
crash_handler = { path = "../crash_handler" }
logger =  { path = "../logger" }
metrics = { path = "../metrics" }
