[package]
name = "jemalloc"
version = "0.1.0"
authors = ["XPeer Association <opensource@xpeer.org>"]
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
jemalloc-sys= { version = "0.1.8", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
jemallocator = { version = "0.1.8", features = ["alloc_trait", "profiling"] }
